# LLMWiki

./: .gitignore  AGENTS.md  LLM Wiki 思考.md  LLM Wiki.md  PLAN.md  README.md  config.toml  pyproject.toml  v2PLAN.md
config/: api-keys.example.toml  config.toml
docs/: CAPABILITY_STRUCTURE.md  PLAN.md  VERSION_CAPABILITIES.md  关于wiki文件夹的解释.md
docs/tests/: 橙子_富含维生素C的柑橘类水果.md  芒果_香甜浓郁的热带水果.md  苹果_营养均衡的日常水果.md  草莓_酸甜可口的浆果类水果.md  香蕉_方便食用的能量补充水果.md
llmwiki/: __init__.py  answer.py  apply.py  cli.py  db.py  embeddings.py  evidence_selection.py  ingest.py  lint.py  llm.py  llm_ingest.py  pipeline.py  planned_retrieval.py  planner.py  query.py  query_analysis.py  rerankers.py  retrieval.py  retrieval_eval.py  retrievers.py  sources.py  synthesis.py  vector_index.py  workspace.py
llmwiki/providers/: base.py  openai.py
sources/normalized/: src_0b40b6933c5b.md  (+4 more)
tests/: helpers.py  test_add_pipeline.py  test_add_source.py  test_apply_workflow.py  test_ask_workflow.py  test_embedding_integration.py  test_embeddings_cli.py  test_embeddings_provider.py  test_evidence_selection.py  test_hybrid_retrieval.py  test_ingest_review.py  test_init_schema.py  test_llm_ingest.py  test_llm_integration.py  test_llm_provider.py  test_pdf_dependency.py  test_planned_retrieval.py  test_planner.py  test_query_analysis.py  test_query_lint_doctor.py  test_regression_samples.py  test_relationship_semantics.py  test_rerankers.py  test_retrieval.py  test_retrieval_eval.py  test_scaffold.py  test_vector_index.py  test_vector_retrieval.py
wiki/: index.md  index.template.md  log.md  log.template.md
(+93 files in other folders)
